styles/styles.css
:root {
  --brown-coffee: #d7b7a7;
  --beige-coffee: #E8D4C3;
  --title-color: #71302f;
  --font1: 'DM Sans', sans-serif;;
}

*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;

}

html, body {
  font-family: var(--font1);
  font-size: 16px;
  height: 100%;
}

.container{
  max-width: 1200px;
  overflow: hidden;
  margin: 0 auto;
}

.hero{
  background-color: var(--brown-coffee);
}

 .nav {
  display: flex;
  align-items: center ;
  gap: 1.1em;
  margin: 0 auto;
  padding: 20px 0;
  margin-left: 1em;
  margin-right: 1em;
}

.nav__logo {
  width: 110px;
}

.nav__img {
  width: 100%;
  display: block;
  border-radius: 50%;
}

.nav__link:first-of-type {
  margin-left: auto;
}

.nav__link {
  text-decoration: none;
  color: var(--title-color);
  font-size: 1.2rem;
}

.nav__link:hover {
  text-decoration: underline;
}

.plenty__hero {
  width: 100%;
  height: 100%;
  text-align: center; 
}

.plenty__logo {
 max-height: 150px;

}

.main{
  min-height: 100vh;    
  background-color: var(--beige-coffee);
  margin: 0 auto;
}

.recipes__container {
  padding: 1rem 0 2em 0; 
  justify-items: center;
}

.recipes__container form {
  width: 89%;
  height: auto;
  max-width: 375px;
  margin: 20px auto;
 }

 .recipes__container form input {
  width: 89%;
  display: inline-block;
  background-color: transparent;
  text-align: center;
  padding: 1em;
  border-radius: 36px;
  border: none;
  outline:none;
  font-size: 1.3em;
  color: var(--title-color);
 }

form ion-icon {
  width: 10%;
  font-size:2rem;
  margin: -9px;
  color: #71302f;
}

.recipes__result {
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
  grid-gap: 2rem;
  overflow: hidden;
  margin: 1rem 0;
}

.recipe__item {
  width: 350px;
  margin: 0 auto;
  background-color:  var(--brown-coffee);
  box-shadow: 0 0 20px rgba(0,0,0,0.1);
  border-radius: 10px;
  overflow: hidden;
}

.recipe__img {
  width: 100%;
  height: 300px;
  object-fit: cover;
}

.recipe__content {
  padding: 20px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.dish {
  font-family:var(--font1) ;
  color: var(--title-color); 
  font-weight: 600;
  font-size: 1.2rem;
  width: 180px;
  text-align: start;
  margin-bottom: 10px;
}

 .recipe__btn {
  display: inline-block;
  text-decoration: none;
  padding: 10px 10px;
  text-align: center;
  font-size: 1rem;
  background-color: rgb(201, 148, 148);
  color: #fff;
  border: 1px solid #ad8978;
  font-weight: bold;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  border-radius: 8px;
  max-width: 100%;
 }

 .recipe__btn:hover{
  background-color: #71302f;
  border: 1px solid #fff;
 }

 .recipe__data {
  color: #fff;
  display: block;
  margin: 16px  ;
  font-size: 1.1rem;
  letter-spacing: 0.05rem;
  line-height: 1.5rem;
  font-weight:500 ;
 }

 .footer {
  background-color: var(--brown-coffee);
  color: white;
  padding: 20px 0;
}

.footer__container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
}

.footer__picture {
  width: 100px;
  margin-right: 30px;
  margin-left: 1em;
}

.footer__logo {
  width: 100%;
  display: block;
  border-radius: 50%;
}

.footer__social {
  display: flex;
  align-items: center;
  margin-bottom: 20px;
}

.footer__media {
  margin-right: 20px;
}

.footer__img {
  width: 25px;
  height: 25px;
}

.footer__nav {
  display: flex;
  flex-direction: column;
  text-align: center;
}

.footer__link {
  color: var(--title-color);
  text-decoration: none;
  margin-right: 20px;
  margin-bottom: 10px;
}

.footer__link:hover {
  text-decoration: underline;
}

@media (min-width: 768px) {

 .nav {

  align-items: center ;
  justify-content: space-between;
}

.nav__logo {
  width: 110px;
}

.footer__media {
    gap: 2em;
  }

.footer__nav {
  flex-direction: row;
  max-width: 600px;
  gap: 2em;
}

}

